--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
     <!-- Fav -->
     <link rel="shortcut icon" href="code.ico">
 
-    <!-- Styles - Currently not being used as using an external style sheet -->
-        <!-- <style>
-            h1,h2,h3.location{font-weight:300}a,body,html{color:#fff}body,html{background-color:#020f16;margin:0;min-height:100%;height:100%;font-family: 'Open Sans', sans-serif;background-image:url('bg.jpg');background-size:cover;background-position:center;}.wrap{display:flex;flex-direction:column;justify-content:center;height:100%}.container{text-align:center;width:650px;margin:auto}h1{font-size:52px}h2{margin-bottom:0}h3.location{margin-top:10px}a:hover{text-decoration:none;color:#d0d0d0;cursor:pointer}.social{padding:0 20px;font-size:26px}.technologies{word-spacing:10px}@media(max-width:960px){.container{width:90%}}
-        </style> -->
-
 </head>
 <body>
 
@@ -35,15 +30,24 @@
         <h2>Front-End Web Developer</h2>
         <h3 class="location">Swindon, Wiltshire</h3>
         <p>Building and maintaining websites and web applications for 3+ years.</p>
-        <p class="technologies">HTML CSS SASS JS NodeJS Angular SQL WordPress Wix Square Space</p>
-        <h3>
+        <p id="bio">Over the last three-year period, I have developed software skills that have enabled me to further progress in my career. In addition to deploying and configuring advanced managed systems, I have developed skills in software coding languages such as HTML, CSS, JavaScript, Ajax, Angular along with some others. I have experience in systems like Jira, Git and Github, allowing me to work in a collaborative teams, both large and small, while keeping my code in line with version control. I have also worked with APIs both pushing and pulling information in a secure and stable manner. Node JS and TypeScript are recent skills, which I have developed thus further enhancing my JavaScript. My development was done through both projects and academia, using platforms such as code academy, Tree house academy and W3schools. </p>
+        <div class="technologies" >
+            <p>HTML CSS JavaScript Git Github Ajax NodeJS Angular SQL WordPress Wix Square Space</p>
+            <p>Microsoft-Office-365 Amazon-AWS VMWare Apple Windows Xero DNS</p>
+            <p>Oracle-Data-Relationship-Management Oracle-Financial-Data-Quality-Management</p>
+        </div>
+        <h3 class="socialIcons">
             <!-- Used Front Awesome for the icons -->
             <span class="social"> <a href="https://github.com/amarmohammed20" target="_blank"><i class="fab fa-github"></i></a> </span>
             <span class="social"> <a href="https://uk.linkedin.com/in/amar-mohammed-4a185b55" target="_blank"><i class="fab fa-linkedin-in"></i></a> </span>
             <span class="social"> <a href="mailto: am.inspiredsolutions@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a> </span>
         </h3>
-        <p>07763 535865</p>
-        <button type="button" id="cvButton">CV</button>
+        <p id="mobile">07763 535865</p>
+        <div class="homepageButtons">
+        <a href="https://www.w3docs.com/" target="_blank" id="jsappButton">JavaScript Apps</a>
+        <a href="https://www.w3docs.com/" target="_blank" id="cvButton">CV</a>
+        <a href="https://www.w3docs.com/" target="_blank" id="nodeJsButton">NodeJS Apps</a>
+        </div>
     </div>
 </div>
 
