Review Stage 1 - No links working

--- a/index.html
+++ b/index.html
@@ -30,17 +30,24 @@
         <h2>Front-End Web Developer</h2>
         <h3 class="location">Swindon, Wiltshire</h3>
         <p>Building and maintaining websites and web applications for 3+ years.</p>
-        <p id="bio">Over the last three-year period, I have developed software skills that have enabled me to further progress in my career. In addition to deploying and configuring advanced managed systems, I have developed skills in software coding languages such as HTML, CSS, JavaScript, Ajax, Angular along with some others. I have experience in systems like Jira, Git and Github, allowing me to work in a collaborative teams, both large and small, while keeping my code in line with version control. I have also worked with APIs both pushing and pulling information in a secure and stable manner. Node JS and TypeScript are recent skills, which I have developed thus further enhancing my JavaScript. My development was done through both projects and academia, using platforms such as code academy, Tree house academy and W3schools. </p>
+        <div class="bio">
+            <p>From obtaining my <b>BSC Business Information Systems</b> degree I have been in the IT industry for over 11 years, covering the basics from hardware all the way through to data warehousing. I have been part of many projects both small and large which involved a vast array of technologies.</p> 
+            <p> I have experience working with SME's  from email deployment, CRM developmenet through to website/web application builds. I have also worked for coporate organisations using oracle ERP solutions to achieve change management and data consolidation.</p>
+            <p>In my most recent role as a consultant I acquired software lanuage skills enabling me to completely customise managed CRM/ERP solutions, achieveing the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benifits of other technologies/lanuages in front-end development.</p> 
+            <p>Currently I am focusing on building on my front-end development profile whilst also working at achieveing full stack status. My current arson of skills include HTML, CSS, JavaScript, JSON, AJAX and many more, working on these skills everyday to build and development websites/application on the world wide web. I also have ecperience with APIs both pushing and pulling information in a secure and stable manner, which currently working on my skills in Node JS and TypeScript and angular</p>
+        </div>
+    </div>
         <div class="technologies" >
+            <h1 id="techHeading">Technology Skill Sets</h1>
             <p>HTML CSS JavaScript Git Github Ajax NodeJS Angular SQL WordPress Wix Square Space</p>
             <p>Microsoft-Office-365 Amazon-AWS VMWare Apple Windows Xero DNS</p>
             <p>Oracle-Data-Relationship-Management Oracle-Financial-Data-Quality-Management</p>
         </div>
         <h3 class="socialIcons">
-            <!-- Used Front Awesome for the icons -->
-            <span class="social"> <a href="https://github.com/amarmohammed20" target="_blank"><i class="fab fa-github"></i></a> </span>
-            <span class="social"> <a href="https://uk.linkedin.com/in/amar-mohammed-4a185b55" target="_blank"><i class="fab fa-linkedin-in"></i></a> </span>
-            <span class="social"> <a href="mailto: am.inspiredsolutions@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a> </span>
+            <!-- Used Font Awesome for the icons -->
+            <span id="githubIcon"> <a href="https://github.com/amarmohammed20" target="_blank"><i class="fab fa-github" title="Github"></i></a> </span>
+            <span id="linkedinIcon"> <a href="https://uk.linkedin.com/in/amar-mohammed-4a185b55" target="_blank"><i class="fab fa-linkedin-in" title="linkedin"></i></a> </span>
+            <span id="emailIcon"> <a href="mailto: am.inspiredsolutions@gmail.com" target="_blank" title="Amars Email"><i class="fas fa-envelope"></i></a> </span>
         </h3>
         <p id="mobile">07763 535865</p>
         <div class="homepageButtons">
