First live commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="technologies" >
             <h1 id="techHeading">Technology Skill Sets</h1>
             <p>HTML CSS JavaScript Git Github Ajax NodeJS Angular SQL WordPress Wix Square Space</p>
-            <p>Microsoft-Office-365 Amazon-AWS VMWare Apple Windows Xero DNS</p>
+            <p>Microsoft-Office-365 Amazon-AWS VMWare Apple Windows Xero DNS Wi-Fi Networking</p>
             <p>Oracle-Data-Relationship-Management Oracle-Financial-Data-Quality-Management</p>
         </div>
         <h3 class="socialIcons">
