--- a/index.html
+++ b/index.html
@@ -1,62 +1,289 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
+
 <head>
-
-    <!-- Meta -->
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Amar Mohammed">
-    <meta name="description" content="Developing Front-End Developer based in Swindon, Wiltshire specialising in HTML, CSS, JavaScript, NodeJs, Angular and Type Script.">
-    <meta name="keywords" content="Front End Developer Swindon, Wiltshire, Web Developer, JavaScript Developer, Software Front-End Developer Swindon">
-
-    <!-- Title -->
-    <title>Amar Mohammed | Front-End Developer</title>
-
-    <!-- Link Elms -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
-    <link rel = "stylesheet" type = "text/css" href = "indexstyle.css">
-
-    <!-- Fav -->
-    <link rel="shortcut icon" href="code.ico">
-
+    <title>My Portfolio/CV</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
+
 <body>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+    <!-- End #mobile-menu-toggle -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
+                <a href="#education">Education</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </header>
+    <!-- End header -->
 
-<div class="wrap">
-    <div class="container">
-        <h1>Amar Mohammed</h1>
-        <h2>Front-End Web Developer</h2>
-        <h3 class="location">Swindon, Wiltshire</h3>
-        <p>Building and maintaining websites and web applications for 3+ years.</p>
-        <div class="bio">
-            <p>From obtaining my <b>BSC Business Information Systems</b> degree I have been in the IT industry for over 11 years, covering the basics from hardware all the way through to data warehousing. I have been part of many projects both small and large which involved a vast array of technologies.</p> 
-            <p> I have experience working with SME's  from email deployment, CRM developmenet through to website/web application builds. I have also worked for coporate organisations using oracle ERP solutions to achieve change management and data consolidation.</p>
-            <p>In my most recent role as a consultant I acquired software lanuage skills enabling me to completely customise managed CRM/ERP solutions, achieveing the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benifits of other technologies/lanuages in front-end development.</p> 
-            <p>Currently I am focusing on building on my front-end development profile whilst also working at achieveing full stack status. My current arson of skills include HTML, CSS, JavaScript, JSON, AJAX and many more, working on these skills everyday to build and development websites/application on the world wide web. I also have ecperience with APIs both pushing and pulling information in a secure and stable manner, which currently working on my skills in Node JS and TypeScript and angular</p>
+    <div id="lead">
+        <div id="lead-content">
+            <h1>Amar Mohammed</h1>
+            <h2>Front-End Developer</h2>
+            <a href="#" class="btn-rounded-white">Download CV</a>
+            <a href="#" class="btn-rounded-white">Enquire Now</a>
+        </div>
+        <!-- End #lead-content -->
+
+        <div id="lead-overlay"></div>
+
+        <div id="lead-down">
+            <span>
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+        </div>
+        <!-- End #lead-down -->
+    </div>
+    <!-- End #lead -->
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">About Me</h2>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        From obtaining my BSC Business Information Systems degree I have been in the IT industry for over 11 years, covering the basics from hardware all the way through to data warehousing. I have been part of many projects both small and large which involved a vast array of technologies. <br>
+                        <br>
+                        I have experience working with SME's from email deployment, CRM developmenet through to website/web application builds. I have also worked for coporate organisations using oracle ERP solutions to achieve change management and data consolidation.<br>
+                        <br>
+                        In my most recent role as a consultant I acquired software lanuage skills enabling me to completely customise managed CRM/ERP solutions, achieveing the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benifits of other technologies/lanuages in front-end development. <br>
+                        <br>
+                        Currently I am focusing on building on my front-end development profile whilst also working at achieveing full stack status. My current arson of skills include HTML, CSS, JavaScript, JSON, AJAX and many more, working on these skills everyday to build and development websites/application on the world wide web. I also have ecperience with APIs both pushing and pulling information in a secure and stable manner, which currently working on my skills in Node JS and TypeScript and angular.
+                    </p>
+
+                    <a href="#" class="btn-about">Enquire Now</a>
+
+                </div>
+            </div>
         </div>
     </div>
-        <div class="technologies" >
-            <h1 id="techHeading">Technology Skill Sets</h1>
-            <p>HTML CSS JavaScript Git Github Ajax NodeJS Angular SQL WordPress Wix Square Space</p>
-            <p>Microsoft-Office-365 Amazon-AWS VMWare Apple Windows Xero DNS Wi-Fi Networking</p>
-            <p>Oracle-Data-Relationship-Management Oracle-Financial-Data-Quality-Management</p>
-        </div>
-        <h3 class="socialIcons">
-            <!-- Used Font Awesome for the icons -->
-            <span id="githubIcon"> <a href="https://github.com/amarmohammed20" target="_blank"><i class="fab fa-github" title="Github"></i></a> </span>
-            <span id="linkedinIcon"> <a href="https://uk.linkedin.com/in/amar-mohammed-4a185b55" target="_blank"><i class="fab fa-linkedin-in" title="linkedin"></i></a> </span>
-            <span id="emailIcon"> <a href="mailto: am.inspiredsolutions@gmail.com" target="_blank" title="Amars Email"><i class="fas fa-envelope"></i></a> </span>
-        </h3>
-        <p id="mobile">07763 535865</p>
-        <div class="homepageButtons">
-        <a href="https://www.w3docs.com/" target="_blank" id="jsappButton">JavaScript Apps</a>
-        <a href="https://www.w3docs.com/" target="_blank" id="cvButton">CV</a>
-        <a href="https://www.w3docs.com/" target="_blank" id="nodeJsButton">NodeJS Apps</a>
+    <!-- End #about -->
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Industry Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="June 2016 – Present">
+                <h3>Seismi</h3>
+                <h4>Technical Consultant</h4>
+                <p>
+                    Initially a consultant implementing solutions for large corporate clients such as Virgin Money and Rolls-Royce. My role entailed implementing complex solutions such as Oracle Data Relationship Management to produce the standardized reports for Financial Directors or those of similar roles. Using Data and Master data management and governance/workflows, I learnt to manage master data in a central location with the necessary business rules/validations applied. Using custom JavaScript code, I created and maintained sophisticated properties against the master data, enriching the data for downstream and upstream systems. Eventually changing the standardized approach to this Oracle product through coding enhancements, customizing the product/solution to exceed the client expectations. <br>
+                    <br>
+                    I than moved onto using Ajax, APIs, Nodejs and angular to assist in building an in-house web application tool, later to be sold. Through this project I used git and git hub for version control for any code I published while working in a management software called Jira. Working in both development and support, I gained a breath of experience on a web application from the cradle to the grave. <br>
+                </p>
+            </div>
+
+            <div data-date="January 2014 – June 2016">
+                <h3>Thirdline</h3>
+                <h4>Project Manager</h4>
+                <p>
+                    While working at enviz I was appointed a project manager at the partner company Thirdline. This promotion was due mainly to my development in task management and customer relationship building. <br>
+                    <br>
+                    This role involved me gathering and documenting business and functional requirements to a high standard for bespoke software construction projects. I also worked closely with business focal points, Project Managers, and Application Team Leads to ensure successful project delivery. My role meant I worked with solution architects and technical leads to ensure that the designs take full account of specific requirements and constraints.
+                </p>
+            </div>
+
+            <div data-date="June 2012 – January 2014">
+                <h3>Enviz IT</h3>
+                <h4>Senior Solutions Specalist</h4>
+                <p>
+                    enviz IT are certified IT Support Specialists based in Swindon, providing bespoke IT support for SMEs. Part of the larger enviz group working with Communications and IT Support to Network Penetration and Cloud Based Solutions. Working in a team of 20, the role of Senior Solutions Specialist includes: Server, Network and Wireless installations; cloud infrastructure migrations, maintenance and troubleshooting; virtual migrations for VMWare, Citrix Xen Desktop, Xen Desktop and Hyper-V systems; Telecommunications; construction of Cloud-based infrastructure including Data Centers and hardware; Cyber-security.
+                </p>
+            </div>
         </div>
     </div>
-</div>
+    <!-- End #experience -->
 
+    <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>Team Tree House</h3>
+            <span class="education-date">January 2016 - Present</span>
+            <h4>Front End Web Development & Full Stack JavaScript</h4>
+            <p>
+                Since starting my recent role I have been constantly been developing my software skills for both Websites and Web applications. I have learnt and built using lanuages such as: <br>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS - CSS Grids - CSS bootstrap</li>
+                    <li>JavaScript Numbers, Functions, Loops Arrays and Objects</li>
+                    <li>JavaScript Landscape</li>
+                    <li>JavaScript and the DOM</li>
+                    <li>AJAX Basics</li>
+                    <li>Asynchronous Programming with JavaScript</li>
+                    <li>Working with Fetch API</li>
+                    <li>Node.js</li>
+                    <li>npm</li>
+                    <li>Express</li>
+                    <li>REST API with Express</li>
+                    <li>jquery</li>
+                    <li>Visual Studio Code</li>
+                    <li>Git and Github</li>
+                </ul>
+            </p>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>University of Gloucestershire</h3>
+            <span class="education-date">June 2012</span>
+            <h4>BSC Business Information Systems Degree</h4>
+            <p>Final Grade 2:1 - This degree combined the best parts of business and computing degrees. By the time I graduated, I understood what makes the business world tick and how information systems are integral to business growth in the 21st century.</p>
+        </div>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+
+    <div id="projects" class="background-alt">
+        <h2 class="heading">Projects</h2>
+        <div class="container">
+            <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Project Name Here</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Project Name Here</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+            </div>
+        </div>
+    </div>
+    <!-- End #projects -->
+
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>CSS Grids</li>
+            <li>CSS bootstrap</li>
+            <li>JavaScript</li>
+            <li>JavaScript Landscape</li>
+            <li>JavaScript and the DOM</li>
+            <li>AJAX Basics</li>
+            <li>Asynchronous Programming with JavaScript</li>
+            <li>Working with Fetch API</li>
+            <li>Node.js</li>
+            <li>npm</li>
+            <li>Express</li>
+            <li>REST API with Express</li>
+            <li>jquery</li>
+            <li>Visual Studio Code</li>
+            <li>Git and Github</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
+
+    <div id="contact">
+        <h2>Get in Touch</h2>
+        <div id="contact-form">
+            <form method="POST" action="https://formspree.io/email@email.com">
+                <input type="hidden" name="_subject" value="Contact request from personal website" />
+                <input type="email" name="_replyto" placeholder="Your email" required>
+                <textarea name="message" placeholder="Your message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+        <!-- End #contact-form -->
+    </div>
+    <!-- End #contact -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 copyright">
+                    <p>
+                        Copyright &copy; 2020 Amar Mohammed
+                    </p>
+                </div>
+                <div class="col-sm-2 top">
+                    <span id="to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="col-sm-5 social">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/amarmohammed20" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        <!-- <li>
+                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        </li> -->
+                        <li>
+                            <a href="https://uk.linkedin.com/in/amar-mohammed-4a185b55" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="mailto: am.inspiredsolutions@gmail.com" target="_blank"><i class="fas fa-envelope" aria-hidden="true"></i></a>
+                        </li>
+                        <!-- <li>
+                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        </li> -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/scripts.min.js"></script>
 </body>
+
 </html>
