--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     <p>
                         From obtaining my BSC Business Information Systems degree I have been in the IT industry for over 11 years, covering the basics from hardware all the way through to data warehousing. I have been part of many projects both small and large which involved a vast array of technologies. <br>
                         <br>
-                        I have experience working with SME's from email deployment, CRM developmenet through to website/web application builds. I have also worked for coporate organisations using oracle ERP solutions to achieve change management and data consolidation.<br>
+                        I have experience working with SME's from email deployment, CRM development through to website/web application builds. I have also worked for corporate organisations using oracle ERP solutions to achieve change management and data consolidation.<br>
                         <br>
-                        In my most recent role as a consultant I acquired software lanuage skills enabling me to completely customise managed CRM/ERP solutions, achieveing the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benifits of other technologies/lanuages in front-end development. <br>
+                        In my most recent role as a consultant I acquired software language skills enabling me to completely customise managed CRM/ERP solutions, achieving the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benefits of other technologies/languages in front-end development. <br>
                         <br>
-                        Currently I am focusing on building on my front-end development profile whilst also working at achieveing full stack status. My current arson of skills include HTML, CSS, JavaScript, JSON, AJAX and many more, working on these skills everyday to build and development websites/application on the world wide web. I also have ecperience with APIs both pushing and pulling information in a secure and stable manner, which currently working on my skills in Node JS and TypeScript and angular.
+                        Currently I am focusing on building on my front-end development profile whilst also working at achieving full stack status. My current arson of skills include HTML, CSS, JavaScript, JSON, AJAX and many more, working on these skills everyday to build and development websites/application on the world wide web. I also have experience with APIs, both pushing and pulling information in a secure and stable manner. Currently I am working on further developing my skills in Node JS, TypeScript and Angular.
                     </p>
 
                     <a href="#" class="btn-about">Enquire Now</a>
@@ -147,6 +147,7 @@
                     <li>Express</li>
                     <li>REST API with Express</li>
                     <li>jquery</li>
+                    <li>SQL</li>
                     <li>Visual Studio Code</li>
                     <li>Git and Github</li>
                 </ul>
@@ -222,6 +223,7 @@
             <li>Express</li>
             <li>REST API with Express</li>
             <li>jquery</li>
+            <li>SQL</li>
             <li>Visual Studio Code</li>
             <li>Git and Github</li>
         </ul>
