--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div id="lead-content">
             <h1>Amar Mohammed</h1>
             <h2>Front-End Developer</h2>
-            <a href="#" class="btn-rounded-white">Download CV</a>
-            <a href="#" class="btn-rounded-white">Enquire Now</a>
+            <a href="Amar_Mohammed_CV.pdf" class="btn-rounded-white">Download CV</a>
+            <a href="mailto:am.inspiredsolutions@gmail.com?Subject=CV%20Enquiry" target="_top" class="btn-rounded-white">Enquire Now</a>
         </div>
         <!-- End #lead-content -->
 
@@ -83,7 +83,7 @@
                         Currently I am focusing on building on my front-end development profile whilst also working at achieving full stack status. My current arson of skills include HTML, CSS, JavaScript, JSON, AJAX and many more, working on these skills everyday to build and development websites/application on the world wide web. I also have experience with APIs, both pushing and pulling information in a secure and stable manner. Currently I am working on further developing my skills in Node JS, TypeScript and Angular.
                     </p>
 
-                    <a href="#" class="btn-about">Enquire Now</a>
+                    <a href="mailto:am.inspiredsolutions@gmail.com?Subject=CV%20Enquiry" target="_top" class="btn-about">Enquire Now</a>
 
                 </div>
             </div>
