Spelling Mistakes Correction

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                 <h3>Seismi</h3>
                 <h4>Technical Consultant</h4>
                 <p>
-                    Initially a consultant implementing solutions for large corporate clients such as Virgin Money and Rolls-Royce. My role entailed implementing complex solutions such as Oracle Data Relationship Management to produce the standardized reports for Financial Directors or those of similar roles. Using Data and Master data management and governance/workflows, I learnt to manage master data in a central location with the necessary business rules/validations applied. Using custom JavaScript code, I created and maintained sophisticated properties against the master data, enriching the data for downstream and upstream systems. Eventually changing the standardized approach to this Oracle product through coding enhancements, customizing the product/solution to exceed the client expectations. <br>
+                    Initially a consultant implementing solutions for large corporate clients such as Virgin Money and Rolls-Royce. My role entailed implementing complex solutions such as Oracle Data Relationship Management to produce the standardized reports for Financial Directors or those of similar roles. Using Data and Master data management and governance/workflows, I learnt to manage master data in a central location with the necessary business rules/validations applied. Using custom JavaScript code, I created and maintained sophisticated properties against the master data, enriching the data for downstream and upstream systems. Eventually changing the standardised approach to this Oracle product through coding enhancements, customising the product/solution to exceed the client expectations. <br>
                     <br>
-                    I than moved onto using Ajax, APIs, Nodejs and angular to assist in building an in-house web application tool, later to be sold. Through this project I used git and git hub for version control for any code I published while working in a management software called Jira. Working in both development and support, I gained a breath of experience on a web application from the cradle to the grave. <br>
+                    I than moved onto using Ajax, APIs, Nodejs and Angular to assist in building an in-house web application tool, later to be sold. Through this project I used Git and Git hub for version control for any code I published while working in a management software called Jira. Working in both development and support, I gained a breadth of experience on a web application from the cradle to the grave. <br>
                 </p>
             </div>
 
@@ -108,7 +108,7 @@
                 <h3>Thirdline</h3>
                 <h4>Project Manager</h4>
                 <p>
-                    While working at enviz I was appointed a project manager at the partner company Thirdline. This promotion was due mainly to my development in task management and customer relationship building. <br>
+                    While working at Enviz I was appointed a project manager at the partner company Thirdline. This promotion was due mainly to my development in task management and customer relationship building. <br>
                     <br>
                     This role involved me gathering and documenting business and functional requirements to a high standard for bespoke software construction projects. I also worked closely with business focal points, Project Managers, and Application Team Leads to ensure successful project delivery. My role meant I worked with solution architects and technical leads to ensure that the designs take full account of specific requirements and constraints.
                 </p>
