FDMEE and DRM Update for New contracting Role

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <br>
                         I have experience working with SME's from email deployment, CRM development through to website/web application builds. I have also worked for corporate organisations using oracle ERP solutions to achieve change management and data consolidation.<br>
                         <br>
-                        In my most recent role as a consultant I acquired software language skills enabling me to completely customise managed CRM/ERP solutions such as <a href="https://www.oracle.com/technetwork/middleware/bi-foundation/fdmee-tuning-1112x-2349440.pdf" target="_blank">Oracle FDMEE</a> and <a href="https://www.oracle.com/middleware/technologies/data-relationship-management.html" target="_blank">Oracle DRM</a>, achieving the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benefits of other technologies/languages in both front-end development and lanuages such as JavaScript and Jython. <br>
+                        In my most recent role as a consultant I acquired software language skills enabling me to completely customise managed CRM/ERP solutions such as <a href="https://www.oracle.com/technetwork/middleware/bi-foundation/fdmee-tuning-1112x-2349440.pdf" target="_blank">Oracle FDMEE</a> and <a href="https://www.oracle.com/middleware/technologies/data-relationship-management.html" target="_blank">Oracle DRM</a>, achieving the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benefits of other technologies/languages in both front-end development and languages such as JavaScript and Jython. <br>
                         <br>
                         Currently I am focusing on building on my front-end development profile whilst also working at achieving full stack status. My current arson of skills include HTML, CSS, JavaScript, JSON, AJAX and many more, working on these skills everyday to build and development websites/application on the world wide web. I also have experience with APIs, both pushing and pulling information in a secure and stable manner. Currently I am working on further developing my skills in Node JS, TypeScript and Angular.
                     </p>
@@ -99,6 +99,7 @@
                 <h4>Technical Support Engineer</h4>
                 <p>
                     In this role I worked in a sister company of my previous employer Seismi to create a web application tool. This required me to build on my JavaScript knowledge through online academia and on the job training. This included software’s and software languages such as JavaScript and the DOM, Ajax, NodeJS, Express, Git and Git hub. In this role I also strengthened my HTML and CSS skills while starting to learn the Angular framework. <br>
+                    <br>
                     I also gained experience with the Amazon AWS platform as test instances were ran on this platform before deployment. I was also responsible to support and integration so lots of work on API's.
                     <br>
                 </p>
@@ -221,7 +222,32 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">IT Skills</h2>
+        <ul>
+            <li>Oracle DRM</li>
+            <li>Oracle FDMEE</li>
+            <li>Microsoft Office 365</li>
+            <li>Microsoft Office</li>
+            <li>Microsoft Azure</li>
+            <li>Microsoft Sharepoint</li>
+            <li>Xero</li>
+            <li>Wix Developer</li>
+            <li>Square Space Developer</li>
+            <li>Microsoft Exchange</li>
+            <li>Amazon AWS</li>
+            <li>G Suite Support</li>
+            <li>Hosting and DNS Management</li>
+            <li>Apple Software and Hardware Support</li>
+            <li>Microsoft Software and Hardware Support</li>
+            <li>Daylite for MAC</li>
+            <li>VMware</li>
+            <li>Trello and Jira Setup - Locally & Cloud</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
+
+    <div id="skills">
+        <h2 class="heading">Software Skills</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
