Added tree house profile button

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             <h3>Team Tree House</h3>
             <span class="education-date">January 2016 - Present</span>
             <h4>Front End Web Development & Full Stack JavaScript</h4>
+            <a href="https://teamtreehouse.com/amarmohammed" target="_blank" class="btn-rounded-white-treehouse">My Profile</a>
             <p>
                 Since starting my recent role I have been constantly been developing my software skills for both Websites and Web applications. I have learnt and built using lanuages such as: <br>
                 <ul>
