--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio/CV</title>
+    <title>Amar Mohammed Front End Developer</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -182,19 +182,19 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
-                <div class="project shadow-large">
+                <div class="project shadow-large" style="height: 300px;">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/PauntleyCourt.jpg" style="max-width: 300px; height: 300px;"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Website Build - Pauntley Court</h3>
                         <p>
-                            This project was very enjoyable for a very pleasant small business. Creating a work of art on the internet which accurately displayed what services they provided. Pauntley Court provide an amazing premises for the public to book and use for all their special occasions such as weddings and so on. 
-                            <br>
-                            This project was very dynamic which the requirements changing a few times. This was never an issue as I maintained to hold a great relationship with the client thus ensuring I managed to finish the project in budget and on time. 
-                            <br>
-                            After this project support was provided when required and a structured training plan was also deployed. I also created a Google business presence and ensured the website, Google applications (Google analytics, Google Console, Google Business and Google Plus), Social Media Accounts and other platforms all worked in conjunction with one another. This gave the client the confidence that they we presented the best way possible on the World Wide Web.
+                            Pleasurable and enjoyable project for a small business. Creating a work of art on the internet which accurately displayed what services they provided. Pauntley Court provide an amazing premises for the public to book and use for all their special occasions such as weddings and so on. 
+                        </p>
+
+                        <p>
+                            After completion support was provided when required and a structured training plan was also deployed. This project included everything from a Google business presence to Social Media Accounts and much more.
                         </p>
                         <a href="https://www.pauntleycourt.com/" target="_blank">View Project</a>
                     </div>
