--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Amar Mohammed Front End Developer</title>
+    <title>Amar Mohammed Full Stack Developer</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Amar Mohammed</h1>
-            <h2>Front-End Developer</h2>
+            <h2>Full Stack Developer</h2>
             <a href="Amar_Mohammed_CV.pdf" class="btn-rounded-white">Download CV</a>
             <a href="mailto:am.inspiredsolutions@gmail.com?Subject=CV%20Enquiry" target="_top" class="btn-rounded-white">Enquire Now</a>
         </div>
@@ -74,13 +74,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        From obtaining my BSC Business Information Systems degree I have been in the IT industry for over 11 years, covering the basics from hardware all the way through to data warehousing. I have been part of many projects both small and large which involved a vast array of technologies. <br>
+                        From obtaining my BSC Business Information Systems degree I have been in the IT industry for over 8 years, covering the basics from hardware all the way through to data warehousing and application development and deployment in the defence sector. I have been part of many projects both small and large which involved a vast array of technologies. I am working with the MERN stack on the Azure platform but have exposure to other lanuages and cloud infrastructures<br>
                         <br>
-                        I have experience working with SME's from email deployment, CRM development through to website/web application builds. I have also worked for corporate organisations using oracle ERP solutions to achieve change management and data consolidation.<br>
+                        I have experience working with SME's working on projects from as small as email deployment, CRM development, website development through to full scale web application builds. I have also worked for corporate organisations using oracle ERP solutions to achieve change management and data consolidation. Currently I am working in the defence sector building custom web applications in a secure manor on Microsoft Azure.<br>
                         <br>
-                        In my most recent role as a consultant I acquired software language skills enabling me to completely customise managed CRM/ERP solutions such as <a href="https://www.oracle.com/technetwork/middleware/bi-foundation/fdmee-tuning-1112x-2349440.pdf" target="_blank">Oracle FDMEE</a> and <a href="https://www.oracle.com/middleware/technologies/data-relationship-management.html" target="_blank">Oracle DRM</a>, achieving the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benefits of other technologies/languages in both front-end development and languages such as JavaScript and Jython. <br>
+                        In my current role as a software developer I work in a team of highly skilled developers building a fleet of custom applications that ensure the customer can work securely at all times. Using the MERN stack, I build secure and scalable applications that both intertwine and work independantly. Using linux VM's to develop in, to then deploy to other environments through CI/CD pipelines, I am able to create and maintian a fully automated working environment.<br>
                         <br>
-                        Currently I am focusing on building on my front-end development profile whilst also working at achieving full stack status. My current arson of skills include HTML, CSS, JavaScript, AJAX, Node JS, Express, Git, Git Hub and many more. Working on these skills everyday to build and develop websites/application on the world wide web. I also have experience with APIs, both pushing and pulling information in a secure and stable manner. Currently I am working on further developing my skills in TypeScript and Angular.
+                        In my previous role as a consultant I acquired software language skills enabling me to completely customise managed CRM/ERP solutions such as <a href="https://www.oracle.com/technetwork/middleware/bi-foundation/fdmee-tuning-1112x-2349440.pdf" target="_blank">Oracle FDMEE</a> and <a href="https://www.oracle.com/middleware/technologies/data-relationship-management.html" target="_blank">Oracle DRM</a>, achieving the clients specific requirements. In the past I mainly focused on plain JavaScript but quickly started to see the benefits of other technologies/languages in both front-end development and languages such as JavaScript and Jython. <br>
+                        <br>
+                        Currently I am focusing on strengthening my full stack skills while learning other lanuages such as Python. I have invested many hours in developing futher infrastructure skills and I am looking to take my Microsoft Azure fundementals exam in the near future.
                     </p>
 
                     <a href="mailto:am.inspiredsolutions@gmail.com?Subject=CV%20Enquiry" target="_top" class="btn-about">Enquire Now</a>
@@ -94,6 +96,18 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Industry Experience</h2>
         <div id="experience-timeline">
+            <div data-date="July 2020 – Present">
+                <h3>Raytheon</h3>
+                <h4>Software Developer</h4>
+                <p>
+                    This current role has been a great learning curve, demonstrating the importance of structured code releases and reviewing other code. I have used my MERN stack skills to build many react applications while integrating these applications to custom API's and mongo and cosmos DB's.<br>
+                    <br>
+                    I have been heavly involved in the deployment of new applications which has given me further knowldege in infrastructure. I have also built instances of Jira Service Desk using Azures ARM template again ensuring the infrastructure is locked down.<br>
+                    <br>
+                    Currently working on achieving qualifications in the Microsoft Azure space.
+                </p>
+            </div>
+            
             <div data-date="June 2019 – Present">
                 <h3>Toponify</h3>
                 <h4>Technical Support Engineer</h4>
@@ -139,7 +153,15 @@
 
     <div id="education">
         <h2 class="heading">Education</h2>
+
         <div class="education-block">
+            <h3>Microsoft Azure</h3>
+            <span class="education-date">March 2021</span>
+            <h4>Microsoft Azure Fundementals</h4>
+            <p>Final Grade 2:1 - This degree combined the best parts of business and computing degrees. By the time I graduated, I understood what makes the business world tick and how information systems are integral to business growth in the 21st century.</p>
+        </div> 
+
+        <div class="education-block">  
             <h3>Team Tree House</h3>
             <span class="education-date">January 2016 - Present</span>
             <h4>Front End Web Development & Full Stack JavaScript</h4>
@@ -166,7 +188,6 @@
                 </ul>
             </p>
         </div>
-        <!-- End .education-block -->
 
         <div class="education-block">
             <h3>University of Gloucestershire</h3>
@@ -230,6 +251,7 @@
             <li>Microsoft Office 365</li>
             <li>Microsoft Office</li>
             <li>Microsoft Azure</li>
+            <li>Azure ARM</li>
             <li>Microsoft Sharepoint</li>
             <li>Xero</li>
             <li>Wix Developer</li>
